[hide]Fix tab dropdown list bg and z-index
but we can't fix it in all the cases because of stacking contextes

--- a/bin/style.less
+++ b/bin/style.less
@@ -3105,6 +3105,10 @@ body.hide-subview {
 	}
 }
 
+.lm_header .lm_tabdropdown_list .lm_tab {
+	width: 100%;
+}
+
 .lm_header .lm_tabdropdown_list .lm_tab .lm_title {
 	width: unset;
 	max-width: 500px;
@@ -6394,6 +6398,11 @@ fancy-tooltip {
 	// fancy-image {
 	// 	transform: none;
 	// }
+}
+
+.lm_tabdropdown_list {
+	z-index: 9999 !important;
+	background-color: #111111;
 }
 
 .ref-viewer {
